# SpectrumWorx

./: README.md
doc/: SpectrumWorx test procedure.doc  SpectrumWorx-User's Guide.doc  readme.txt
installer/PluginsFolder/: SpectrumWorx.paths.in
installer/ProgramFolder/: LittleEndian.url  ReadMe.rtf
installer/ProgramFolder/Presets/Autotune/: LE Aeolian.swp  LE Dorian.swp  LE Gypsy.swp  LE Ionian.swp  LE Locrian.swp  LE Lydian.swp  LE Mixolydian.swp  LE Pentatonic major.swp  LE Pentatonic minor.swp  LE Phrygrian.swp  LE Triad augmented.swp  LE Triad diminished.swp  LE Triad major.swp  LE Triad minor.swp
installer/ProgramFolder/Presets/CinningBao/SideChainables/: (drums 104bpm) Drum Battle.swp  (drums 104bpm) DrumCoder.swp  (drums 104bpm) DrumLongerer.swp  (drums 104bpm) DrumThreshFun.swp  (+6 more)
installer/ProgramFolder/Presets/ESS/: ESS Claw.swp  ESS Colonel Kurtz.swp  ESS Digital March.swp  ESS Ghost in the Opera.swp  ESS Gilgandra.swp  ESS Glass Rain.swp  ESS Illawarra.swp  ESS Jao.swp  ESS Lazzzers.swp  ESS Nervous Perls.swp  ESS Once Upon a Time.swp  ESS Ribar.swp  ESS Robokid.swp  ESS Shelve.swp  ESS Sirup Freeze.swp  ESS Stomper.swp  ESS Swoosh.swp  ESS Tears in Heaven.swp  ESS Triad major Autotune.swp  ESS Windy Days.swp
installer/ProgramFolder/Presets/Echoes/: LE Basement Voices.swp  LE Boiler.swp  LE Creepy Deepy.swp  LE Digital March.swp  LE Flying Saucer.swp  LE Great Escape.swp  LE Jumbo Jet Down Total.swp  LE Jumbo Jet Down.swp  LE Jumbo Jet Total.swp  LE Jumbo Jet Up Total.swp  LE Jumbo Jet Up.swp  LE Jumbo Jet.swp  LE Nervous Perls.swp  LE Ruby Chamber.swp  LE Skokomish.swp  LE Small Wall.swp  LE Space Race.swp  LE Spiner.swp  LE Stomper.swp  LE Windy Days.swp  LE Wiper.swp
installer/ProgramFolder/Presets/Extreme/: LE Anything but Silence.swp  LE Blood Group A.swp  LE Bullet Escape.swp  LE Bulletdodger.swp  LE Fight Club.swp  LE Haircut.swp  LE High Lines.swp  LE Laugh Track.swp  LE Look Who's Talking.swp  LE Low and Slow.swp  LE Mad Max.swp  LE Squeaking.swp  LE Turntables.swp  LE Where It's At.swp
installer/ProgramFolder/Presets/Frozen/: LE Alias.swp  LE Shelve.swp
installer/ProgramFolder/Presets/Noise/: LE Crickets.swp  LE Glass Rain.swp  LE Leaps.swp  LE Noise Follower.swp  LE Swoosh.swp  LE Total Eliminator.swp
installer/ProgramFolder/Presets/Random/: LE Assembly Lines.swp  LE Caffe Break.swp  LE Chicken Cage.swp  LE Claw.swp  LE Hectic.swp  LE Intervention.swp  LE Invention.swp  LE Miaow Storm.swp  LE Plastic.swp  LE Roze.swp  LE Septica.swp  LE Shifts.swp  LE So What!.swp  LE Tears in Heaven.swp  LE Thin Air.swp  LE Underwater.swp
installer/ProgramFolder/Presets/Techno/: LE Colonel Kurtz.swp  LE Funny Games.swp  LE Hit the Breaks.swp  LE Hurricane going your way.swp  LE Just One Sec.swp  LE Landing.swp  LE Lazzzers.swp  LE Lulu.swp  LE Random Trains.swp  LE Retreat.swp  LE Technologic.swp  LE Through the Barricades.swp
installer/ProgramFolder/Presets/Tumbi Umbi/: LE Adaminaby.swp  LE Angurugu.swp  LE Bamaga.swp  LE Berri.swp  LE Bindoon.swp  LE Bunyip.swp  LE Burraneer.swp  LE Coonabarabran.swp  LE Coonawarra.swp  LE Cooroy.swp  LE Dandenong.swp  LE Dowerin.swp  LE Dubbo.swp  LE Echuca.swp  LE Eneabba.swp  LE Gilgandra.swp  LE Gingin.swp  LE Gulgong.swp  LE Illawarra.swp  LE Indooroopilly.swp  LE Jeparit.swp  LE Joondalup.swp  LE Kalamunda.swp  LE Kangy Angy.swp  LE Karumba.swp  LE Koo Wee Rup.swp  LE Mandurah.swp  LE Mareeba.swp  LE Millaa Millaa.swp  LE Moe.swp  LE Ngunnawal.swp  LE Nhulunbuy.swp  LE Noosa.swp  LE Nowra.swp  LE Onkaparinga.swp  LE Ouyen.swp  LE Paroo.swp  LE Parramatta.swp  LE Pialligo.swp  LE Ramingining.swp  (+10 more)
installer/ProgramFolder/Presets/Verbs/: LE Barker.swp  LE Far and small.swp  LE Freaky cave.swp  LE Ghost from the opera.swp  LE Longerb.swp  LE Mirko.swp  LE Paste.swp  LE Pitched.swp  LE Shoots of reverbation.swp  LE Slavko.swp  LE Slewerb.swp  LE Werby.swp  LE Wetwerb.swp
installer/ProgramFolder/Presets/Voices/: LE Adorno.swp  LE Autotalk.swp  LE Broken Robot.swp  LE Closed Doors.swp  LE Friendly Voice.swp  LE Frobot.swp  LE Megnetic Collapse.swp  LE No Safety.swp  LE Robokid.swp  LE Rostfrei.swp  LE The Fabric of Sound.swp  LE Totalbot.swp  LE WhisperMe.swp  LE WhispererThree.swp
installer/ProgramFolder/Presets/Wahs/: LE ghost guitar.swp  LE wah fast.swp  LE wah medium.swp  LE wah nyah.swp  LE wah sleepy.swp  LE wah slow.swp  LE wah soft fast.swp  LE wah soft medium.swp  LE wah soft slow.swp  LE wah whisper.swp  LE wah yu.swp
installer/resources/: CPack.distribution.dist.in  WIX.template.in
installer/resources/OSX/: MacInstallIntro.txt  PkgInfo  SpectrumWorx.icns  make_symlinks.sh
installer/resources/Windows/: createPathsFile.js  directories.wxs  features.wxs  files.wxs.in
source/: CMakeLists.txt  debugConsole.cpp  spectrumWorx.cpp  spectrumWorx.hpp  spectrumWorxAU.cpp  spectrumWorxAU.hpp  spectrumWorxVST24.cpp  spectrumWorxVST24.hpp
source/configuration/: constants.hpp  versionConfiguration.hpp.in
source/core/: automatedModuleChain.cpp  automatedModuleChain.hpp  configuration.cmake  parameterID.hpp  sources.cmake  spectrumWorxCore.cpp  spectrumWorxCore.hpp  spectrumWorxSharedImpl.hpp  spectrumWorxSharedImpl.inl
source/core/host_interop/: host2Plugin.cpp  host2Plugin.hpp  host2PluginImpl.hpp  host2PluginImpl.inl  parameters.hpp  plugin2Host.cpp  plugin2Host.hpp  plugin2HostImpl.hpp  plugin2HostImpl.inl
source/core/modules/: automatedModule.cpp  automatedModule.hpp  automatedModuleImpl.hpp  automatedModuleImpl.inl  factory.cpp  factory.hpp  finalImplementations.hpp  moduleDSP.hpp  moduleDSPAndGUI.cpp  moduleDSPAndGUI.hpp  moduleGUI.cpp  moduleGUI.hpp
source/external_audio/: sample.cpp  sample.hpp  sampleMac.cpp  sampleWin.cpp
source/gui/: gui.cpp  gui.hpp  gui.mm  juceLexicalCast.cpp
source/gui/editor/: auxiliaryComponents.cpp  auxiliaryComponents.hpp  moduleMenuHolder.cpp  moduleMenuHolder.hpp  spectrumWorxEditor.cpp  spectrumWorxEditor.hpp
source/gui/modules/: moduleControl.cpp  moduleControl.hpp  moduleUI.cpp  moduleUI.hpp
source/gui/preset_browser/: presetBrowser.cpp  presetBrowser.hpp
(+102 files in other folders)
